--- a/style.css
+++ b/style.css
@@ -112,7 +112,8 @@ INNER GRID STYLES
 ======================= 
 */
 .inner-grid-container {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   display: grid;
   grid-template-rows: 1fr auto 60px;
   grid-template-columns: 1fr;
